Модальное окно карточки, добавление в корзину v.1

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -166,10 +166,10 @@
 
 	<template id="card-catalog">
 		<button class="gallery__item card">
-			<span class="card__category">софт-скил</span>
-			<h2 class="card__title">+1 час в сутках</h2>
-			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
-			<span class="card__price">750 синапсов</span>
+			<span class="card__category"></span>
+			<h2 class="card__title"></h2>
+			<img class="card__image" src="" alt="" />
+			<span class="card__price"></span>
 		</button>
 	</template>
 
