--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -128,11 +128,11 @@
 					<div class="order">
 						<label class="order__field">
 							<span class="form__label modal__title">Email</span>
-							<input class="form__input" type="text" placeholder="Введите Email" />
+							<input class="form__input" type="email" placeholder="Введите Email" />
 						</label>
 						<label class="order__field">
 							<span class="form__label modal__title">Телефон</span>
-							<input class="form__input" type="text" placeholder="+7 (" />
+							<input class="form__input" type="tel" placeholder="+7 (" />
 						</label>
 					</div>
 					<div class="modal__actions">
