Ревью. Разделение OrderForm на 3 класса. v.7

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -137,6 +137,7 @@
 					</div>
 					<div class="modal__actions">
 						<button disabled class="button">Оплатить</button>
+						<span class="form__errors"></span>
 					</div>
 				</form>
 			</div>
